Code cleaning
Refresh Minecraft Token in every connection